spring-boot-services/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bigtech-chat-spring
  labels:
    app.kubernetes.io/part-of: bigtech-chat-spring
    app.kubernetes.io/managed-by: kustomize
